<resources>
    <string name="app_name">BiBY</string>
    <string name="btn_online">获取在线密码</string>
    <string name="btn_submit">提交</string>
    <string name="bike_online_password">解锁密码</string>
    <string name="input_num">请输入车牌号</string>
    <string name="bike_online_num">车牌号</string>
    <string name="btn_to_offline">进入离线版</string>
    <string name="input_password">请输入您获取到的解锁密码</string>
    <string name="btn_add_to_online">进入在线版</string>
    <string name="btn_add_to_offline">进入离线版</string>
    <string name="btn_offline">获取离线密码</string>
    <string name="btn_offline_to_online">进入在线版</string>
</resources>
